# RUHacking2018

./: .env  Cargo.toml  Makefile  README.md  test.json
configs/: 1.json
scripts/: generateconfigs  test.py
src/: config.rs  main.rs  network.rs  nodes.rs  protocol.rs
