[package]
name = "ruhacking2018"
version = "0.1.0"
authors = ["a <>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp-serde = "0.13.7"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

sodiumoxide = "0.0.16"

dotenv = "0.10.1"

futures = "0.1.18"
hyper = "0.11"
tokio-core = "0.1"
